# Projects_Manager

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
Projects_Manager/: asgi.py  settings.py  urls.py  wsgi.py
project/: admin.py  decorators.py  forms.py  models.py  urls.py  views.py
project/migrations/: 0001_initial.py  0002_alter_project_options_project_end_date_and_more.py  0003_alter_project_options.py  0004_clients_projectstatuses_projecttypes_tasklists_and_more.py  0005_alter_clients_options.py  0006_priorities_tasks.py  0007_projects.py
project/static/: style.css
project/static/css/: form.css  manager_info.css  style.css  styles_title.css
project/templates/project/: basic.html  calendar_page.html  change_project.html  change_task.html  create_project.html  create_tasks.html  delete_project.html  delete_tasks.html  main_page.html  manager_info.html  project.html  report.html  show_project_for_worker.html  show_projects_for_managers.html  show_tasks.html  show_tasks_for_worker.html  tasks.html
users/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_responsible_workers_alter_listpositions_table_and_more.py  0003_alter_listpositions_options.py  0004_users.py  0005_alter_users_options_alter_users_table.py  0006_alter_users_table.py  0007_delete_users.py  0008_delete_workersgroups.py
users/static/css/: buttons.css  style1.css  users_list.css
users/templates/users/: Login.html  Register.html  change_user.html  change_user_position.html  delete_user.html  users_list.html
